# cs7633-stretch-teleoperation

./: CMakeLists.txt  HRI_GUI.py  README.md  package.xml  setup.py  timer_working.py
analysis/: demographics.R  fix_002_003.R  gender_hri.ipynb  hri_time_stats.R  log_cleanup.R  log_splitter.R  order_effects.R  qualtrics_tam_trust.R  quickstats.py
analysis/data/: notes.txt  qualtrics.csv
analysis/data/hri001/: log_2023-04-11_17-06-19.csv  log_cleaned.csv  recorded_times1.csv  recorded_times_cleaned.csv
analysis/data/hri002/: log_2023-04-12_17-03-58.csv  log_cleaned.csv  recorded_times_cleaned.csv
analysis/data/hri003/: log_cleaned.csv  recorded_times3.csv  recorded_times_cleaned.csv
analysis/data/hri004/: log_2023-04-13_16-19-33.csv  log_cleaned.csv  recorded_times4.csv  recorded_times_cleaned.csv
analysis/data/hri005/: log_2023-04-13_17-10-22.csv  log_cleaned.csv  recorded_times5.csv  recorded_times_cleaned.csv
analysis/data/hri006/: log_2023-04-13_18-41-57.csv  log_cleaned.csv  recorded_times_cleaned.csv
analysis/data/misc/: log_2023-04-13_16-04-01.csv
launch/: project.launch  stretch_core.launch
logs/: recorded_times2.csv  recorded_times6.csv  recorded_timesasdfasdf.csv
nodes/: gui_teleop.py  hand_teleop.py  hand_tracker.py  keyboard_teleop.py  logger_node.py  robot_control.py  xbox_teleop.py
src/: xbox_controller.py
src/cs7633_project/: HRI_GUI.py  gui_control.py  hand_tracker.py  logger.py  robot_control.py  xbox_control.py
srv/: ControlAction.srv
test/: enumerated_gestures_test.py  mediapipe_test.py  xbox_test.py
(+1 files in other folders)
